--- a/cuidados.html
+++ b/cuidados.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 <!-- SLIDER -->
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-slide="true">
+<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-slide="true">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -56,19 +56,22 @@
         <div class="carousel-item active d-item">
             <img src="assets/img/gato-veterinario.jpg" class="d-block w-100 d-img" alt="slider1">
             <div class="carousel-caption top-0 mt-4">
-                <h1 class="display-1 fw-bolder text-capitalize s-title"> SAFDLAKSFDKALDS</h1>
+                <h1 class="display-1 fw-bolder text-capitalize s-title">PRINCIPALES CUIDADOS</h1>
+                <p class="mt-3  text-uppercase s-texto">PARA TUS FELINOS</p>
             </div>
         </div>
         <div class="carousel-item  d-item">
             <img src="assets/img/gato-arenero.jpg" class="d-block w-100 d-img" alt="slider2">
             <div class="carousel-caption top-0 mt-4">
-                <h1 class="display-1 fw-bolder text-capitalize s-title"> SAFDLAKSFDKALDS</h1>
+                <h1 class="display-1 fw-bolder text-capitalize s-title">PRINCIPALES CUIDADOS</h1>
+                <p class="mt-3  text-uppercase s-texto">PARA TUS FELINOS</p>
             </div>
         </div>
         <div class="carousel-item  d-item">
             <img src="assets/img/gato-comida.jpg" class="d-block w-100 d-img" alt="slider3">
             <div class="carousel-caption top-0 mt-4">
-                <h1 class="display-1 fw-bolder text-capitalize s-title"> SAFDLAKSFDKALDS</h1>
+                <h1 class="display-1 fw-bolder text-capitalize s-title">PRINCIPALES CUIDADOS</h1>
+                <p class="mt-3  text-uppercase s-texto">PARA TUS FELINOS</p>
             </div>
         </div>
     </div>
@@ -84,39 +87,170 @@
 
 <!-- CUIDADOS -->
 <section class="cuidados-main">
+  <div class="container-fluid">
+    <div class="row">
+         <div class="col-xl-6 col-md-12">
+            <h1>Socialización temprana</h1>
+             <hr>
+                <p class="txt-c">La socialización temprana en gatos es un proceso crucial que tiene un impacto significativo en el desarrollo de su personalidad, comportamiento y bienestar a lo largo de su vida. </p>
+             <div class="imagen-texto">
+                <img src="assets/img/gato-socia.jpg" alt="" class="img-cuidados">
+                 <ul class="circle-list txt-derecha custom-list">
+                     <h2>Para una buena socialización:</h2>
+                     <li>Exposición a personas</li>
+                     <li>Interacción con otros animales</li>
+                     <li>Juguetes y estimulación</li>
+                 </ul>
+             </div>
+         </div>
+         <div class="col-xl-6 col-md-12">
+                <h1>Aburrimiento</h1>
+                <hr>
+                <p class="txt-c ">El aburrimiento en los gatos puede llevar a comportamientos no deseados, como arañar muebles, rasgar cortinas o incluso orinar fuera de la caja de arena. </p>
+                <div class="imagen-texto">
+                    <img src="assets/img/gato-aburrido.jpg" alt="" class="img-cuidados">
+                    <ul class="circle-list txt-derecha custom-list">
+                        <h2>Para evitar problemas con el aburrimiento: </h2>
+                        <li>Proporcionar rascador</li>
+                        <li>Oportunidades para jugar</li>
+                        <li>Oportunidades para explorar</li>
+                        <li>Mantenerlo entretenido</li>
+                        <li>Satisfacer necesidades</li>
+                    </ul>
+                </div>
+         </div>
+    </div>
+      <div class="row mt-5">
+          <div class="col-xl-6 col-md-12">
+              <h1>Manejo del estrés</h1>
+              <hr>
+              <p class="txt-c">El manejo del estrés en gatos es esencial para garantizar su bienestar emocional y físico. Los gatos son criaturas sensibles y pueden experimentar estrés debido a una variedad de situaciones y factores.</p>
+              <div class="imagen-texto">
+                  <img src="assets/img/gato-estres.jpeg" alt="" class="img-cuidados">
+                  <ul class="circle-list txt-derecha custom-list">
+                      <h2>Para evitar el estrés:</h2>
+                      <li>Feromonas sintéticas</li>
+                      <li>Enriquecimiento ambiental</li>
+                      <li>Comunicación y afecto</li>
+                      <li>Consulta con un veterinario</li>
+                      <li>Productos calmantes</li>
+                  </ul>
+              </div>
+          </div>
+          <div class="col-xl-6 col-md-12">
+              <h1>Nutrición y control de peso</h1>
+              <hr>
+              <p class="txt-c ">La nutrición y el control de peso son esenciales para la salud y la longevidad de tu gato. Mantener una dieta equilibrada y controlar el peso de manera adecuada son responsabilidades fundamentales como dueño de un gato.</p>
+              <div class="imagen-texto">
+                  <img src="assets/img/gato-nutri.jpg" alt="" class="img-cuidados">
+                  <ul class="circle-list txt-derecha custom-list">
+                      <h2>Para una buena nutrición:</h2>
+                      <li>Alimentación adecuada</li>
+                      <li>Alimentación de calidad</li>
+                      <li>Control de porciones</li>
+                      <li>Ejercicio y actividad</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+      <div class="row mt-5">
+          <div class="col-xl-6 col-md-12">
+              <h1>Vacunación y desparacitación</h1>
+              <hr>
+              <p class="txt-c">La vacunación y la desparasitación son medidas cruciales para prevenir enfermedades y proteger la salud de tu gato. Estas prácticas no solo benefician a tu mascota, sino que también ayudan a prevenir la propagación de enfermedades zoonóticas y a mantener un entorno más saludable para tu familia y otros animales. </p>
+              <div class="imagen-texto">
+                  <img src="assets/img/gato-vacuna.jpeg" alt="" class="img-cuidados">
+                  <ul class="circle-list txt-derecha custom-list">
+                      <h2>Para mantenerlo al día:</h2>
+                      <li>Plan de vacunación</li>
+                      <li>Desparasitación externa</li>
+                      <li>Higiene del entorno</li>
+                      <li>Control periódico con el veterinario</li>
+                  </ul>
+              </div>
+          </div>
+          <div class="col-xl-6 col-md-12">
+              <h1>Higiene</h1>
+              <hr>
+              <p class="txt-c ">La falta de atención a la higiene del pelo y el arenero de tu gato puede conllevar a una serie de problemas que afectan tanto a la salud del felino como a la armonía en tu hogar. </p>
+              <div class="imagen-texto">
+                  <img src="assets/img/gato-cepillo.webp" alt="" class="img-cuidados">
+                  <ul class="circle-list txt-derecha custom-list">
+                      <h2>Para una buena higiene:</h2>
+                      <li>Cepillado regular</li>
+                      <li>Atención a los nudos de pelo</li>
+                      <li>Arenero limpio</li>
+                      <li>Cambio de arena</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+      <div class="row mt-5">
+          <div class="col-xl-6 col-md-12">
+              <h1>Atención y acompañamiento</h1>
+              <hr>
+              <p class="txt-c">Los gatos, a pesar de su fama de independientes, requieren vínculos emocionales y estimulación mental para mantener su salud mental y emocional. La ausencia de estos cuidados puede conducir a problemas de comportamiento, obesidad, estrés y otros trastornos que afectan su calidad de vida.</p>
+              <div class="imagen-texto">
+                  <img src="assets/img/gato-caricia.jpg" alt="" class="img-cuidados">
+                  <ul class="circle-list txt-derecha custom-list">
+                      <h2>Para una buena relación:</h2>
+                      <li>Acaricio y afecto</li>
+                      <li>Compañía de otros gatos</li>
+                      <li>Amor y paciencia</li>
+                      <li>Estimulación cognitiva</li>
+                  </ul>
+              </div>
+          </div>
+          <div class="col-xl-6 col-md-12">
+              <h1>Diagnóstico y tratamientos</h1>
+              <hr>
+              <p class="txt-c ">Si tu gato muestra signos de enfermedad, como cambios en el apetito, la actividad o el comportamiento, es importante llevarlo al veterinario de inmediato.</p>
+              <div class="imagen-texto">
+                  <img src="assets/img/gato-medico.jpg" alt="" class="img-cuidados">
+                  <ul class="circle-list txt-derecha custom-list">
+                      <h2>Para una buena salud:</h2>
+                      <li>Atención a cambios de actitud</li>
+                      <li>Atención a signos de enfermedad</li>
+                      <li>Visita periódica al veterinario</li>
+                      <li>Registro de salud</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<!-- SECCIÓN FOOTER -->
+<section class="final">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-6 col-md-12">
-            <h1>Aburrimiento en tus gatos</h1>
-            <hr>
-                <p class="">El aburrimiento en los gatos puede llevar a comportamientos no deseados, como arañar muebles, rasgar cortinas o incluso orinar fuera de la caja de arena. Proporcionar un rascador y oportunidades para jugar y explorar ayuda a mantener a tu gato entretenido y satisface sus necesidades naturales.</p>
-             <div class="imagen-texto">
-                <img src="assets/img/gato-aburrido.jpg" alt="" width="300">
-                 <ul class="circle-list txt-derecha">
-                     <h2 class="titulo-11">lafksdl</h2>
-                     <li>Elemento  awdawdaw 2</li>
-                     <li>Elemento dwa dwad awd 3</li>
-                     <li>Elementoaw daw daw  3</li>
-                     <li>Elementoaw daw daw da 3</li>
-                     <li>Elemento wd d awd aw d3</li>
-                     <li>Elementoawd aw daw d 3</li>
-                     <li>Elemento aw daw daw d3</li>
-                     <li>Elemento aaww dawd awd awd awd3</li>
-                 </ul>
-
-             </div>
-        </div>
-            <div class="col-xl-6 col-md-12">
-                <h1>Aburrimiento en tus gatos</h1>
-                <hr>
-                <p class="">El aburrimiento en los gatos puede llevar a comportamientos no deseados, como arañar muebles, rasgar cortinas o incluso orinar fuera de la caja de arena. Proporcionar un rascador y oportunidades para jugar y explorar ayuda a mantener a tu gato entretenido y satisface sus necesidades naturales.</p>
-                <p><img src="assets/img/gato-aburrido.jpg" alt="" width="300"></p>
+            <div class="col-xl-4 col-md-12">
+                <div class="d-flex justify-content-center justify-content-md-center">
+                    <img src="assets/img/gato-icon.png" width="140" alt="logo-footer" class="logo-f">
+                </div>
+                <p class="d-flex align-items-center cf-txt mt-3 d-flex justify-content-md-center">Creado por Bairon  (2023)©</p>
+            </div>
+            <div class="col-xl-4 col-md-12">
+                <h1 class="contacto">CONTACTOS</h1>
+                <div class="img-foo">
+                    <img src="assets/img/email-icon.png" alt="" width="30px">
+                    <p class="txt-foo">baironcoyopae16@gmail.com</p>
+                </div>
+                <div class="img-foo">
+                    <img src="assets/img/wsp-icon.png" alt="" width="30px">
+                    <p class="txt-foo">+56 9 0000 0000</p>
+                </div>
+            </div>
+            <div class="col-xl-4 col-md-12 f-icons">
+                <h1 class="title">SÍGUENOS</h1>
+                <div class="d-flex justify-content-evenly justify-content-md-evenly">
+                    <img src="assets/img/in-icon.png" alt="Instagram" class="">
+                    <img src="assets/img/fb-icon.png" alt="Facebook" class="">
+                    <img src="assets/img/tw-icon.png" alt="Twitter" class="">
+                </div>
             </div>
         </div>
     </div>
 </section>
-<!-- SECCIÓN FOOTER -->
-
 <!--JAVASCRIPT BOOTSTRAP -->
 <script src="assets/js/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
