--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
                 <div class="col-2">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/gato-icon.png" width="50" alt="logo-pagina">
                 </a>
                 </div>
-
                 <div class="col-8">
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
@@ -42,7 +40,6 @@
                 </ul>
                 </div>
                 <div class="col-2"></div>
-
             </div>
         </div>
     </nav>
@@ -54,12 +51,12 @@
 <section class="presentacion">
  <div class="container-fluid">
      <div class="row">
-         <div class="col-xl-6 col-md-12 align-items-center">
+         <div class="col-xl-6 ">
              <img src="assets/img/gato-rubio.png" class="imagen-p" alt="Imágen Presentación">
          </div>
-         <div class="col-xl-6 col-md-12">
-             <h1 class="titulo-p   ">Te damos la bienvenida a nuestra organización dedicada a los felinos</h1>
-             <p class="texto-p    ">Nuestra meta es educar sobre el cuidado de nuestras queridas mascotas felinas, proporcionando conocimiento para comprender mejor sus necesidades y brindarles una vida feliz y saludable a nuestros adorados compañeros peludos.</p>
+         <div class="col-xl-6 col-md-12 ">
+             <h1 class="titulo-p">Te damos la bienvenida a nuestra organización dedicada a los felinos</h1>
+             <p class="texto-p">Nuestra meta es educar sobre el cuidado de nuestras queridas mascotas felinas, proporcionando conocimiento para comprender mejor sus necesidades y brindarles una vida feliz y saludable a nuestros adorados compañeros peludos.</p>
          </div>
      </div>
  </div>
@@ -115,7 +112,7 @@
     </div>
 </section>
 <!-- SECCIÓN RAZAS-->
-<section class="seccion-razas imagenfondo">
+<section class="seccion-razas">
     <div class="container-fluid">
         <h1 class="d-flex justify-content-center t-razas">CONOZCAMOS</h1>
         <h1 class="d-flex justify-content-center t2-razas">SUS RAZAS</h1>
@@ -190,7 +187,6 @@
 </section>
 
 <!-- SECCIÓN FOOTER -->
-
 <section class="final">
     <div class="container-fluid">
     <div class="row">
@@ -222,7 +218,6 @@
         </div>
     </div>
 </section>
-
 <!--JAVASCRIPT BOOTSTRAP -->
 <script src="assets/js/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
